@@ -1,0 +1,178 @@
+#!/usr/bin/env python3
+
+#########################################################
+# 
+# by Netzint GmbH 2023
+# Lukas Spitznagel (lukas.spitznagel@netzint.de)
+# 
+#########################################################
+
+import socket
+import logging
+import json
+import os
+import argparse
+import subprocess
+
+from subprocess import PIPE
+
+logging.basicConfig(filename='/var/log/linuxmuster/cachingserver/satellite.log',format='%(levelname)s: %(asctime)s %(message)s', level=logging.DEBUG)
+
+def error(msg):
+    logging.error(msg)
+    exit(1)
+
+def __execute(command):
+    return subprocess.run(command, stdout=PIPE, stderr=PIPE)
+
+def sendMessage(conn, msg):
+    logging.debug(f"Send message '{msg}'")
+    conn.send(msg.encode("utf-8"))
+
+def receiveMessage(conn):
+    message = conn.recv(1024).decode()
+    if len(message) > 40:
+        logging.debug("Receive message '" + message[:40].replace('\n', '') + "...'")
+    else:
+        logging.debug(f"Receive message '{message}'")
+    return message
+
+def receiveData(conn, part=None):
+    data = conn.recv(1024)
+    if part != None:
+        logging.debug(f"[{part}] Receive data...")
+    else:
+        logging.debug("Receive data...")
+    return data
+
+def getSatelliteConfig():
+    return json.load(open("/var/lib/linuxmuster-cachingserver/server.json", "r"))
+
+def connect(ip, port):
+    logging.info(f"Starting new connection to {ip} on port {port}...")
+    try:
+        client = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+        client.connect((ip, port))
+        logging.info("Connection successful!")
+        return client
+    except Exception as e:
+        logging.error(f"Connection to {ip} on port {port} not possible! Message: " + str(e))
+        return False
+
+def authenticate(client, config):
+    sendMessage(client, "auth %s" % config["key"])
+    result = receiveMessage(client).split(" ", 1)
+
+    if result[0] != "hello":
+        logging.error(f"Authentification failed! Connection to {client.getpeername()[0]} is not possible!")
+        return False
+
+    logging.info("Authentification successful!")
+    return True
+    
+def get(client, actions):
+    sendMessage(client, "get " + actions)
+    if receiveMessage(client) != "ok":
+        logging.error("Server said action is invalid!")
+        return False
+
+    sendMessage(client, "prehook?")
+    prehook = receiveMessage(client)
+    if prehook != "no":
+        logging.info(f"Running prehook: {prehook}")
+        hookResult = __execute(prehook.split(" "))
+        logging.info(f"Result: {hookResult}")
+    sendMessage(client, "done")
+
+    sendMessage(client, "start")
+    invalidtaskcount = 0
+    while True:
+        task = receiveMessage(client)
+        logging.debug(f"Receive task {task}")
+        if task == "end":
+            logging.info("All files are received successfully!")
+            break
+        elif task == "file":
+            invalidtaskcount = 0
+            sendMessage(client, "ok")
+            headers = receiveMessage(client)
+            filename = headers.split(";")[0]
+            size = int(headers.split(";")[1])
+            logging.info(f"Receiving file {filename} with {size} bytes")
+            sendMessage(client, "ok")
+            path = "/".join(filename.split('/')[0:-1])
+            if not os.path.exists(path):
+                os.makedirs(path)
+            if size > 0:
+                file = open(filename, "wb")
+                fileparts = (int(size / 1024) + 1)
+                logging.debug(f"Receiving file in {fileparts} parts...")
+                for i in range(0, (fileparts)):
+                    file.write(receiveData(client, (i + 1)))
+            else:
+                logging.debug("File is empty. Only generating empty file!")
+                with open(filename, "w") as file:
+                    file.write("")
+            sendMessage(client, "ok")
+            logging.info(f"File {filename} received successfully!")
+        else:
+            invalidtaskcount += 1
+        
+        if(invalidtaskcount > 10):
+            logging.error("To many invalid messages. Maybe server is not responding anymore...?")
+            return False
+
+    sendMessage(client, "posthook?")
+    posthook = receiveMessage(client)
+    if posthook != "no":
+        logging.info(f"Running posthook: {posthook}")
+        hookResult = __execute(posthook.split(" "))
+        logging.info(f"Result: {hookResult}")
+    sendMessage(client, "done")
+    return True
+
+def api(items):
+    config = getSatelliteConfig()
+    server = config["server_name"] + "." + config["server_domain"]
+    port = config["server_port"]
+    client = connect(server, port)
+    if client:
+        if authenticate(client, config):
+            if "," in items:
+                for item in items.split(","):
+                    get(client, item)
+            else:
+                get(client, items)
+            sendMessage(client, "bye")
+            logging.info("Finished!")
+            client.close()
+        else:
+            return False
+    return False
+
+def main():
+    config = getSatelliteConfig()
+    server = config["server_name"] + "." + config["server_domain"]
+    port = config["server_port"]
+    parser = argparse.ArgumentParser()
+    parser.add_argument("--items", nargs="+", required=True, help="List items to sync")
+    args = parser.parse_args()
+
+    client = connect(server, port)
+    if client:
+        if authenticate(client, config):
+            for item in args.items:
+                if not get(client, item):
+                    logging.error("Error processing %s. Continue with next one..." % item)
+            sendMessage(client, "bye")
+            logging.info("Finished!")
+            client.close()
+        else:
+            exit(1)
+    else:
+        exit(1)
+    
+
+if __name__ == "__main__":
+    main()
+
